# pflw

./: Cargo.toml  README.md  justfile  pydf.pyi  pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: CI.yml  TEST.yml  release.yml
examples/: basic.py
pflw/: __init__.py  __init__.pyi
pflw/std/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_imports.py
