[workspace]
members = []
resolver = "3"

[workspace.package]
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
description = "Python Dataflow Framework in Rust"
edition = "2024"
homepage = "https://github.com/Hennzau/pflw"
keywords = []
readme = "README.md"
rust-version = "1.87.0"
categories = []
documentation = "https://github.com/Hennzau/pflw"
license = "Apache-2.0"
repository = "https://github.com/Hennzau/pflw"
version = "0.1.0"

[package]
name = "pflw"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pflw"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
