[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pydf"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
scripts = { pydf = "pydf:main" }

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.workspace]
members = [
    "examples/simple",
]
